--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@
 body,
 html {
   // @apply m-0 p-0 h-screen text-indigo-100 bg-slate-900;
-  @apply m-0 p-0 h-max text-indigo-100 bg-gradient-to-tl from-slate-950 to-slate-900;
+  @apply m-0 p-0 h-max text-indigo-100 bg-gradient-to-tl from-slate-950 to-slate-900 scroll-smooth;
 
   font-family: 'Inter';
 }
