--- a/src/pages/elements/styles.scss
+++ b/src/pages/elements/styles.scss
@@ -1,3 +1,7 @@
 .tag {
   @apply p-1 px-3 text-sm font-light bg-gray-800 rounded-full lg:text-xs lg:px-2.5;
 }
+
+.card {
+  @apply lg:hover:bg-slate-500 lg:p-5 lg:hover:rounded-md lg:hover:bg-opacity-10;
+}
