Made some colours more accessible

--- a/src/pages/elements/styles.scss
+++ b/src/pages/elements/styles.scss
@@ -3,5 +3,5 @@
 }
 
 .card {
-  @apply lg:hover:bg-slate-500 lg:p-5 lg:hover:rounded-md lg:hover:bg-opacity-10;
+  @apply lg:hover:bg-slate-500 lg:p-5 lg:hover:rounded-lg lg:hover:bg-opacity-10;
 }
