Change color palette to consistently use slate

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,7 +4,7 @@
 
 body,
 html {
-  @apply m-0 p-0 h-max text-indigo-100 bg-gradient-to-tl from-slate-950 to-slate-900 scroll-smooth;
+  @apply m-0 p-0 h-max text-slate-100 bg-gradient-to-tl from-slate-950 to-slate-900 scroll-smooth;
 }
 
 @font-face {
