--- a/src/pages/elements/styles.scss
+++ b/src/pages/elements/styles.scss
@@ -1,5 +1,5 @@
 .tag {
-  @apply p-1 px-3 text-sm font-light bg-gray-800 rounded-full lg:text-xs lg:px-2.5;
+  @apply p-1 px-3 text-sm font-light bg-slate-800 rounded-full lg:text-xs lg:px-2.5;
 }
 
 .card {
