--- a/src/pages/elements/styles.scss
+++ b/src/pages/elements/styles.scss
@@ -1,3 +1,7 @@
+.tag__list {
+  @apply flex flex-row flex-wrap justify-start gap-2 align-middle;
+}
+
 .tag {
   @apply rounded-full bg-slate-800 p-1 px-3 text-sm font-light lg:px-2.5;
 }
