--- a/src/pages/elements/styles.scss
+++ b/src/pages/elements/styles.scss
@@ -7,5 +7,5 @@
 }
 
 .card {
-  @apply lg:p-5 lg:hover:rounded-lg lg:hover:bg-slate-500 lg:hover:bg-opacity-10;
+  @apply flex flex-col gap-4 lg:p-5 lg:hover:rounded-lg lg:hover:bg-slate-500 lg:hover:bg-opacity-10;
 }
