--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -1,7 +1,7 @@
 @import './../index.scss';
 
 .section {
-  @apply flex flex-col gap-4 lg:p-5 lg:target:rounded-lg lg:target:bg-slate-500 lg:target:bg-opacity-10;
+  @apply flex flex-col gap-4 rounded-xl bg-slate-500 bg-opacity-10 p-8;
 }
 
 .section__heading {
